added detection for dragging within the Scene. This will serve as a simple control of the pod (left/right). For some reason, pod.position is nil . That is the only thing keeping it from working fully

--- a/PodDrop/Base.lproj/Main.storyboard
+++ b/PodDrop/Base.lproj/Main.storyboard
@@ -20,6 +20,12 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="3b7-zN-edg">
+                    <connections>
+                        <action selector="handlePan:" destination="BV1-FR-VrT" id="Fj6-M3-vbj"/>
+                        <outlet property="delegate" destination="BV1-FR-VrT" id="aAP-Cc-wqC"/>
+                    </connections>
+                </panGestureRecognizer>
             </objects>
         </scene>
     </scenes>
